summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: Missing closing brace `}' assumed here
right();
^Moria:6: error: ';' expected but '{' found.
  } while(!isOverBaggle) {
                         ^